2007-10-20  Paul J Stevens <paul@nfg.nl>

	* pool.h:
	decrease HARD_MAX_CHILDREN to 300 to avoid segfaults

2007-10-19  Paul J Stevens <paul@nfg.nl>

	* VERSION:
	v2.2.7-rc4
	* pool.h:
	increase HARD_MAX_CHILDREN to 1024
	* modules/authldap.c:
	small logging change in dm_ldap_mod_field
	* man/dbmail-export.8, man/dbmail-imapd.8, man/dbmail-lmtpd.8, 
	man/dbmail-pop3d.8, man/dbmail-sievecmd.8, man/dbmail-smtp.1, 
	man/dbmail-timsieved.8, man/dbmail-users.8, man/dbmail-util.8, 
	man/dbmail.1, man/dbmail.conf.5:
	updated manpages

2007-10-16  Paul J Stevens <paul@nfg.nl>

	* check_dbmail.h, check_dbmail_imapd.c, check_dbmail_message.c, 
	check_dbmail_misc.c, dbmail-message.c, misc.c, misc.h:
	cleanup the iconv infrastructure a bit more

2007-10-12  Paul Stevens <paul@nfg.nl>

	* dbmail-message.c:
	missed a case of utf7 decoding (bug #649)
	* debian/dbmail.init, debian/dbmail.postinst, debian/dbmail.preinst:
	packaging updates

2007-10-09  Paul J Stevens <paul@nfg.nl>

	* debian/dbmail.init, debian/dbmail.postinst, debian/dbmail.preinst:
	packaging updates

2007-10-06  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c, imapcommands.c:
	make noop work again

2007-10-05  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c, dbmail-imapsession.h, imapcommands.c:
	allow IDLE command after authentication (bug #648)
	* modules/dbsqlite.c:
	remove sqlite3 internals
	* VERSION:
	v2.2.7-rc3
	* ChangeLog, check_dbmail_misc.c, misc.c, misc.h:
	work around incomplete utf7 decoding by gmime (bug #649)
	* ChangeLog, dbmail-mailbox.c, dbmail-mailbox.h:
	respect charset argument during search (bug #646)
	* dbmail.h.in:
	fix build for freebsd after _XOPEN_SOURCE change

2007-10-02  Paul Stevens <paul@nfg.nl>

	* ChangeLog, pipe.c:
	limit the scope of the transaction during message insertion to avoid 
	deadlocks
	* check_dbmail_misc.c, misc.c:
	generate better randomness by using the glib calls in create_unique_id

2007-09-30  Paul J Stevens <paul@nfg.nl>

	* dbmail.h.in: